# mdopen

./: .editorconfig  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: actionlint.yml  rust.yml
src/: app_config.rs  cli.rs  cli_help.txt  main.rs  markdown.rs  sse.rs  syntax.rs  watch.rs  websocket.rs
src/template/: base.html  dir.html  error.html  index.html  page.html
tests/: test_server.rs
