[package]
name = "mdopen"
edition = "2021"
version = "0.5.0"
description = "Preview markdown files in a browser"
keywords = ["markdown"]
license = "BSD-3-Clause"
repository = "https://github.com/immanelg/mdopen"

[dependencies]
env_logger = "0.11.3"
lexopt = "0.3.0"
log = "0.4.21"
nanotemplate = "0.3.0"
open = "5"
percent-encoding = "2"
pulldown-cmark = { version = "0.12.1", default-features = false, features = ["html"] }
tiny_http = "0.12.0"

[profile.release]
strip = true
