[package]
name = "mdopen"
edition = "2021"
version = "0.5.0"
description = "Preview markdown files in a browser"
keywords = ["markdown"]
license = "BSD-3-Clause"
repository = "https://github.com/immanelg/mdopen"

[dependencies]
env_logger = { version = "0.11.3", default-features = false, features = [
    "humantime",
] }
lexopt = "0.3.0"
log = "0.4.21"
open = { version = "5", optional = true }
percent-encoding = "2"
pulldown-cmark = { version = "0.13", default-features = false, features = [
    "html",
] }
tiny_http = "0.12.0"

sha1 = { version = "0.10.6", optional = true }
base64 = { version = "0.22.1", optional = true }
notify = { version = "8.0.0", optional = true }
bus = { version = "2.4.1", optional = true }

minijinja = "2.7.0"
serde = { version = "1", features = ["derive"] }
syntect = { version = "5", optional = true }
signal-hook = "0.3.17"

[features]
default = ["open", "reload", "syntax"]
open = ["dep:open"]
reload = ["dep:notify", "dep:bus", "dep:base64", "dep:sha1"]
syntax = ["dep:syntect"]


[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[dev-dependencies]
reqwest = { version = "0.12.12", features = ["blocking"] }
